add: folder image. add: foto1.png. add: folder fonts. add: fonts-family

--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="style.css" type="text/css" rel="stylesheet">
-    <title>Document</title>
+    <title>Resume Evgeni Anisoev</title>
 </head>
 <body>
   <header>
-    <div></div>
+    <h1 class="hidden-text">Resume Evgeni Anisoev</h1>
+    <nav>
+      <div>
+       <ul>
+          <li><a href="">1</a></li>
+          <li><a href="">2</a></li>
+          <li><a href="">3</a></li>
+        </ul>
+      </div>  
+    </nav>
   </header>
   <main>
-
+    <div class="wrapper">
+        <div class="square"><img src="image/foto1.png" alt="My foto"></div>
+        <div class="my-name">Hello! <br> My name is Evgeni Anisoev.</div>
+    </div>
+    <div>I want to join the team of bearded programmers. (sorry for my humor).
+      I want to master the profession of a programmer. Is real cool.</div>
+    <div></div>
   </main>
   <footer>
 
