add: main. add: footer

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav>
       <div>
        <ul>
-          <li><a href="">1</a></li>
-          <li><a href="">2</a></li>
-          <li><a href="">3</a></li>
+          <li class="navi"><a href="">1</a></li>
+          <li class="navi"><a href="">2</a></li>
+          <li class="navi"><a href="">3</a></li>
         </ul>
       </div>  
     </nav>
@@ -23,14 +23,40 @@
   <main>
     <div class="wrapper">
         <div class="square"><img src="image/foto1.png" alt="My foto"></div>
-        <div class="my-name">Hello! <br> My name is Evgeni Anisoev.</div>
+        <div class="my-name">Hello! 
+          <br> My name is Evgeni Anisoev.
+        </div>
     </div>
-    <div>I want to join the team of bearded programmers. (sorry for my humor).
-      I want to master the profession of a programmer. Is real cool.</div>
-    <div></div>
+    <div class="portfolio">I want to join the team of bearded programmers. (sorry for my humor).
+      I want to master the profession of a programmer. Is real cool. 
+      <br>
+      <em><b>My skill level:</b></em> almost zero.
+      <br>
+      <em><b>Code examples:</b></em> <a href="https://github.com/nupaT/warmup" title="Get in">Code.</a>
+      <br>
+       <em><b>Experience:</b></em>
+          <ul>
+            <li>Course projects at the institute.</li>
+            <li><a href="https://www.codecademy.com/users/nupaT/achievements" title="Get in">CodeAcademy.</a></li>
+          </ul>
+        </li>
+      <em><b>Education:</b></em> the is my first courses to programming.
+      <br>
+      <div><em><b>Level english:</b></em> i studied French at school so zero.</div>
+      </div>
   </main>
   <footer>
-
+      <div class="form">
+        <input type="submit" value="Send me!" title="Send to E-mail" >
+      </div>
+      <div class="contact">
+        <ul>
+          <li>Addres: City, street, home.</li>
+          <li><a href="tel: +375 29 123 45 67 ">tel:</a>  +375 29 123 45 67</li>
+          <li><a href="mailto: trash_jack@mail.ru" id="send-email">Email:</a> trash_jack@mail.ru</li>
+        </ul>
+      </div>
+    </div>  
   </footer>
 </body>
 </html>
