add: contacts. final version

--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
     <h1 class="hidden-text">Resume Evgeni Anisoev</h1>
     <nav>
       <div>
-       <ul>
-          <li class="navi"><a href="">1</a></li>
-          <li class="navi"><a href="">2</a></li>
-          <li class="navi"><a href="">3</a></li>
+       <ul class="wrapper-nav">
+          <li class="navi"><a href="#Photo">Photo</a></li>
+          <li class="navi"><a href="#Portfolio">Portfolio</a></li>
+          <li class="navi"><a href="#Example">Example</a></li>
+          <li class="navi"><a href="#Contacts">Contacts</a></li>
         </ul>
       </div>  
     </nav>
   </header>
   <main>
     <div class="wrapper">
-        <div class="square"><img src="image/foto1.png" alt="My foto"></div>
+        <div class="square"><a name="Photo"></a> <img src="image/foto1.png" alt="My foto"></div>
         <div class="my-name">Hello! 
-          <br> My name is Evgeni Anisoev.
+          <br> My name: Evgeni. 
+          <br> Surname: Anisoev.
         </div>
     </div>
-    <div class="portfolio">I want to join the team of bearded programmers. (sorry for my humor).
+    <div class="portfolio"><a name="Portfolio"></a> I want to join the team of bearded programmers. (sorry for my humor).
       I want to master the profession of a programmer. Is real cool. 
       <br>
       <em><b>My skill level:</b></em> almost zero.
       <br>
-      <em><b>Code examples:</b></em> <a href="https://github.com/nupaT/warmup" title="Get in">Code.</a>
+      <em><b>Code examples:</b></em> <a href="https://github.com/nupaT/warmup" title="Get in" name="Example">Code.</a>
       <br>
        <em><b>Experience:</b></em>
           <ul>
@@ -47,13 +49,13 @@
   </main>
   <footer>
       <div class="form">
-        <input type="submit" value="Send me!" title="Send to E-mail" >
+        <a href="mailto: trash_jack@mail.ru" name="Contacts"><input type="submit" value="Send me!" title="Send to E-mail"></a> 
       </div>
       <div class="contact">
         <ul>
           <li>Addres: City, street, home.</li>
           <li><a href="tel: +375 29 123 45 67 ">tel:</a>  +375 29 123 45 67</li>
-          <li><a href="mailto: trash_jack@mail.ru" id="send-email">Email:</a> trash_jack@mail.ru</li>
+          <li><a href="mailto: trash_jack@mail.ru" >Email:</a> trash_jack@mail.ru</li>
         </ul>
       </div>
     </div>  
